k8s/platform/kong/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kong-proxy
  namespace: platform
  labels:
    app: kong-gateway
spec:
  type: NodePort
  ports:
    - name: proxy
      port: 80
      targetPort: 8000
      nodePort: 30000
    - name: admin
      port: 8001
      targetPort: 8001
    - name: metrics
      port: 8100
      targetPort: 8100
  selector:
    app: kong-gateway
