k8s/platform/kong/base/http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: platform-ingress-routes
  namespace: platform
spec:
  parentRefs:
    - name: kong-gateway
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /v1/orders
      backendRefs:
        - name: order-service
          namespace: apps
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /v1/riders
      backendRefs:
        - name: rider-service
          namespace: apps
          port: 8081
